# Agent_AI

./: .gitignore  README.md  background.js  client.py  content.js  gmail.py  logger.py  main.py  manifest.json  paint_mcp.py  pop.md  popup.css  popup.html  popup.js  prompt.yaml  pyproject.toml  schema.py  styles.css  test.html  utils.py  viewer.css  viewer.html  viewer.js
booking_extension/: README.md  background.js  booking.ipynb  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
docx_extension/: README.md  background.js  docx.ipynb  manifest.json  options.js  popup.html  popup.js  styles.css
eag_s1/: manifest.json  options.html  options.js  popup.html  popup.js
eag_s1/icons/: ICON_README.md
genai/: base.py  gemini.py  gpt.py
