[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "google-genai>=1.52.0",
    "mcp[cli]>=1.22.0",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.9",
]
